--- a/ProjectYP/ProjectYP/ProjectYP.csproj
+++ b/ProjectYP/ProjectYP/ProjectYP.csproj
@@ -46,23 +46,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Add.cs" />
-    <Compile Include="Div.cs" />
+    <Compile Include="OneArgument\Arccos.cs" />
+    <Compile Include="OneArgument\Arcctan.cs" />
+    <Compile Include="OneArgument\Arcsin.cs" />
+    <Compile Include="OneArgument\Arctan.cs" />
+    <Compile Include="OneArgument\Cos.cs" />
+    <Compile Include="OneArgument\Ctan.cs" />
+    <Compile Include="OneArgument\Exp.cs" />
+    <Compile Include="OneArgument\Ln.cs" />
+    <Compile Include="OneArgument\Tan.cs" />
+    <Compile Include="TwoArguments\Add.cs" />
+    <Compile Include="TwoArguments\Div.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="IOneArgumentCalculator.cs" />
-    <Compile Include="ITwoArgumentsCalculator.cs" />
-    <Compile Include="OneArgumentFactory.cs" />
-    <Compile Include="Sin.cs" />
-    <Compile Include="TwoArgumentsFactory.cs" />
-    <Compile Include="Mul.cs" />
+    <Compile Include="OneArgument\IOneArgumentCalculator.cs" />
+    <Compile Include="TwoArguments\ITwoArgumentsCalculator.cs" />
+    <Compile Include="OneArgument\OneArgumentFactory.cs" />
+    <Compile Include="OneArgument\Sin.cs" />
+    <Compile Include="TwoArguments\LogXY.cs" />
+    <Compile Include="TwoArguments\TwoArgumentsFactory.cs" />
+    <Compile Include="TwoArguments\Mul.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sub.cs" />
+    <Compile Include="TwoArguments\Sub.cs" />
+    <Compile Include="TwoArguments\xpowery.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -88,6 +99,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
